# phun

./: README.rst  pyproject.toml
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.rst
mod/phun/: __init__.py  core.py  helper.py
tests/: __init__.py  test_istreeof.py  test_partial.py
