[tool.poetry]
name = "phun"
version = "0.0.0"
description = "Physics Aware Functions"
authors = ["Chi-kwan Chan <chanc@arizona.edu>"]
readme = "README.rst"
packages = [{include="phun", from="mod"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
